--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -15,6 +15,7 @@ button[type='submit'] {
 
 button[type='submit'].disabled {
   color: $dark-gray;
+  cursor: default;
 }
 
 button[type='auxiliary'] {
